<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/constraintLayout"
                                                   android:layout_height="fill_parent"
                                                   android:layout_width="fill_parent">


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@drawable/profile"
            android:id="@+id/user_profile_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintDimensionRatio="h,1:1" tools:ignore="MissingConstraints"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"/>
    />

    <TextView
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Full Name"
            app:layout_constraintStart_toStartOf="@+id/fullNameEdit"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_image" android:layout_marginTop="10dp"/>
    <EditText
            android:id="@+id/fullNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/fullName"
            app:layout_constraintEnd_toEndOf="parent" android:drawableStart="@android:drawable/ic_menu_edit"/>

    <TextView
            android:id="@+id/usernameTxt"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:text="User Name"
            app:layout_constraintStart_toStartOf="@+id/usernameEdit" android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toTopOf="@+id/usernameEdit"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/fullNameEdit"/>
    <EditText
            android:id="@+id/usernameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/fullNameEdit" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            android:drawableStart="@android:drawable/ic_menu_edit"/>
    <TextView
            android:id="@+id/emailTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            app:layout_constraintStart_toStartOf="@+id/usernameEdit"
            app:layout_constraintBottom_toTopOf="@+id/emailEdit"
            app:layout_constraintTop_toBottomOf="@+id/usernameEdit"/>
    <EditText
            android:id="@+id/emailEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/usernameEdit" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            android:drawableStart="@android:drawable/sym_action_email"/>
    <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            app:layout_constraintStart_toStartOf="@+id/emailEdit"
            app:layout_constraintBottom_toTopOf="@+id/passwordEdit"/>
    <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/emailEdit" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            android:drawableStart="@android:drawable/ic_secure"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm Password"
            app:layout_constraintStart_toStartOf="@+id/passwordEdit"
            android:id="@+id/amount" app:layout_constraintBottom_toTopOf="@+id/confirmPasswordEdit"/>
    <EditText
            android:id="@+id/confirmPasswordEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="19dp" app:layout_constraintTop_toBottomOf="@+id/passwordEdit"
            android:drawableStart="@android:drawable/ic_secure"/>
    <TextView
            android:id="@+id/phoneNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone Number"
            app:layout_constraintStart_toStartOf="@+id/confirmPasswordEdit"
            app:layout_constraintBottom_toTopOf="@+id/phoneNoEdit"/>
    <EditText
            android:id="@+id/phoneNoEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="19dp" app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEdit"
            android:drawableStart="@android:drawable/stat_sys_vp_phone_call"/>

    <Button
            android:id="@+id/signupBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SignUp"
            android:background="#00BB00"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/lnkLogin"
            app:layout_constraintStart_toStartOf="@+id/phoneNoEdit" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/phoneNoEdit"/>
    <TextView android:id="@+id/lnkLogin"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:text="Already Registered? Login here"
              android:gravity="center"
              android:textSize="15dp"
              android:textColor="#3F51B5"
              android:onClick="test"
              android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginBottom="8dp" app:layout_constraintTop_toTopOf="@+id/btnLogin"
              app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintHorizontal_bias="0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>
