<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".MainActivity"
        android:orientation="vertical">


    <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/home_frame"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">
        <fragment
                android:name="androidx.navigation.fragment.NavHostFragment"
                app:navGraph="@navigation/nav_resource"
                app:defaultNavHost="true"
                android:id="@+id/main_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>