<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Entry">
    <TextView
            android:text="OpnMarket"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:id="@+id/textView4" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="44dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.527"/>
    <Button
            android:text="Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/login" app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginTop="120dp" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="80dp" app:layout_constraintBottom_toTopOf="@+id/signup"/>
    <Button
            android:text="SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/signup" android:layout_marginTop="80dp" app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="261dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>